adding content to footer and fixing postit posting button

--- a/app/globals.css
+++ b/app/globals.css
@@ -118,7 +118,7 @@
 }
 
 .bgLogo {
-  background-image: url("/image/bgForLogo");
+  background-image: url("/image/bgForLogo.png");
   background-size: contain;
   width: 100%;
   height: 100%;
