--- a/app/globals.css
+++ b/app/globals.css
@@ -117,9 +117,9 @@
   background-size: cover;
 }
 
-.bgLogo {
+/*  .bgLogo {
   background-image: url("/image/bgForLogo.png");
   background-size: contain;
   width: 100%;
   height: 100%;
-}
+}  */
