--- a/app/globals.css
+++ b/app/globals.css
@@ -150,3 +150,129 @@
   background-size: cover;
   background-repeat: repeat;
 }
+
+.light {
+  /*  width: 100vw; */
+  /*  height: 100%; */
+  /* border-radius: 50%; */
+  background: radial-gradient(circle, #ffff99 30%, #ffd700 60%, #000 100%);
+  box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+  animation: flicker 2s ease-in-out forwards;
+}
+
+.darkPurpleLight {
+  background: radial-gradient(circle, #9b0275 30%, #58013e 60%, #000 100%);
+  box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+  animation: flickerPurpleLight 2s ease-in-out forwards;
+}
+
+@keyframes flicker {
+
+  0%,
+  10% {
+    box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+    background: #202020;
+  }
+
+  11%,
+  19% {
+    box-shadow: 0 0 15px 10px rgba(255, 255, 153, 0.8);
+    background: radial-gradient(circle, #ffff99 30%, #ffd700 60%, #000 100%);
+  }
+
+  20%,
+  24% {
+    box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+    background: #202020;
+  }
+
+  25%,
+  34% {
+    box-shadow: 0 0 15px 10px rgba(255, 255, 153, 0.8);
+    background: radial-gradient(circle, #ffff99 30%, #ffd700 60%, #000 100%);
+  }
+
+  35%,
+  40% {
+    box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+    background: #202020;
+  }
+
+  45%,
+  60% {
+    box-shadow: 0 0 30px 15px rgba(255, 255, 153, 0.8);
+    background: radial-gradient(circle, #ffff99 40%, #ffd700 70%, #000 100%);
+  }
+
+  75%,
+  90% {
+    box-shadow: 0 0 0 rgba(255, 255, 153, 0.8);
+    background: #202020;
+  }
+
+  91%,
+  100% {
+    box-shadow: 0 0 50px 25px rgba(255, 255, 153, 1), 0 0 200px 100px rgba(255, 255, 153, 0.1);
+    background: radial-gradient(circle, #ffff99 50%, #ffd700 80%, #000 100%);
+  }
+}
+
+@keyframes flickerPurpleLight {
+
+  0%,
+  10% {
+    box-shadow: 0 0 0 rgba(204, 4, 137, 0.8);
+    background: #202020;
+  }
+
+  11%,
+  19% {
+    box-shadow: 0 0 15px 10px rgba(204, 4, 137, 0.8);
+    background: radial-gradient(circle, #9b0275 30%, #58013e 60%, #000 100%);
+  }
+
+  20%,
+  24% {
+    box-shadow: 0 0 0 rgba(204, 4, 137, 0.8);
+    background: #202020;
+  }
+
+  25%,
+  34% {
+    box-shadow: 0 0 15px 10px rgba(204, 4, 137, 0.8);
+    background: radial-gradient(circle, #9b0275 30%, #58013e 60%, #000 100%);
+  }
+
+  35%,
+  40% {
+    box-shadow: 0 0 0 rgba(204, 4, 137, 0.8);
+    background: #202020;
+  }
+
+  45%,
+  60% {
+    box-shadow: 0 0 30px 15px rgba(204, 4, 137, 0.8);
+    background: radial-gradient(circle, #9b0275 30%, #58013e 60%, #000 100%);
+  }
+
+  75%,
+  90% {
+    box-shadow: 0 0 0 rgba(204, 4, 137, 0.8);
+    background: #202020;
+  }
+
+  91%,
+  100% {
+    box-shadow: 0 0 50px 25px rgba(126, 1, 109, 0.8), 0 0 200px 100px rgba(255, 255, 153, 0.1);
+    background: radial-gradient(circle, #9b0275 30%, #58013e 60%, #000 100%);
+  }
+}
+
+.shadcn-textarea::-webkit-scrollbar {
+  display: none;
+}
+
+.shadcn-textarea {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
